[package]
name = "son-of-man"
version = "0.1.0"
authors = ["Ata Kuyumcu <ata.kuyumcu@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main"}
bevy_rapier3d = {git = "https://github.com/dimforge/bevy_rapier"}
extend = "1.0.1"
